# cpack-systemd-demo

./: CMakeLists.txt  README.md  postinst.in  postrm.in  prerm.in
